# Circle-detection-cuda

./: .gitignore  CMakeLists.txt  Circle.cu  Circle.cuh  Point.cu  Point.cuh  Ransac.cu  Ransac.cuh  main.cu  points1.txt  points2.txt  points3.txt  points4.txt
src/: Circle.cu  Circle.cuh  Point.cuh  Ransac.cu  Ransac.cuh  cudaError.cuh  info.cu  kernel.cu  kernel.cuh  main.cu
